--- a/src/js/component/common/lista/lista.html
+++ b/src/js/component/common/lista/lista.html
@@ -1,5 +1,5 @@
 <main class="lista" ng-class="{'in' : $ctrl.openList}">
-  <a ng-click="$ctrl.back()"></a>
+  <a ng-click="$ctrl.back()" class="lista-volver"></a>
   <div>
     <span>{{$ctrl.newTipo}}</span>
   </div>
