--- a/src/js/component/pages/producto/producto.html
+++ b/src/js/component/pages/producto/producto.html
@@ -3,6 +3,7 @@
     <div class="producto-conte">
       <div>
         <section class="producto-titulo">
+          <a ng-href="#/productos/{{$ctrl.producto.categoria}}"></a>
           <div class="producto-titulo-fondo"></div>
           <h1>{{$ctrl.producto.titulo}}</h1>
           <p>Características Del Producto</p>
