--- a/src/js/component/pages/receta/receta.html
+++ b/src/js/component/pages/receta/receta.html
@@ -3,6 +3,7 @@
       <div class="producto-conte">
         <div>
           <section class="producto-titulo">
+            <a ng-href="#/recetas"></a>
             <div class="producto-titulo-fondo" 
                  style="background-image: url('./img/imagenes-recetas/{{$ctrl.producto.imagen}}.jpg')"></div>
             <div class="receta-descripcion">
