--- a/src/css/index.build.css
+++ b/src/css/index.build.css
@@ -274,7 +274,7 @@ pre, code {
 /* ------------------------------------
       ·HELPERS
   -------------------------------------*/
-.wrapper, .loading, .menu-logo, .menu-modal, .lista span, .lista > a, .fondo header a, .fondo footer p, .masInfo, .masInfo-conte > a, .home, .home-nav-secondary p, .home-nav-secondary ul, .sociales a, .categoria-fondo, .producto-conte, .contacto-form span, .contacto-form .icon-check {
+.wrapper, .loading, .menu-logo, .menu-modal, .lista span, .lista-volver, .producto-titulo > a, .fondo header a, .fondo footer p, .masInfo, .masInfo-conte > a, .home, .home-nav-secondary p, .home-nav-secondary ul, .sociales a, .categoria-fondo, .producto-conte, .contacto-form span, .contacto-form .icon-check {
   -webkit-box-align: center;
   -webkit-align-items: center;
       -ms-flex-align: center;
@@ -684,15 +684,14 @@ menu {
     background-position: center;
     -webkit-background-size: cover;
             background-size: cover;
-    left: -2rem;
+    left: -1rem;
     height: 100vh;
     opacity: 0;
-    top: -2rem;
+    top: -1rem;
     -webkit-transition: all ease-in-out .3s;
     -o-transition: all ease-in-out .3s;
     transition: all ease-in-out .3s;
-    width: -webkit-calc(100vw + 2rem);
-    width: calc(100vw + 2rem);
+    width: 100vw;
     z-index: 999999;
     visibility: collapse;
     -webkit-box-orient: vertical;
@@ -750,7 +749,12 @@ menu {
       margin-top: 1rem; }
     .menu-modal {
       left: -2rem;
-      top: -2rem; }
+      top: -2rem;
+      -webkit-box-orient: horizontal;
+      -webkit-box-direction: normal;
+      -webkit-flex-direction: row;
+          -ms-flex-direction: row;
+              flex-direction: row; }
       .menu-modal:after {
         width: 100vw; }
       .menu-modal a {
@@ -787,20 +791,18 @@ menu {
       font-family: 'icomoon';
       left: 49%;
       position: absolute; }
-  .lista > a {
+  .lista-volver, .producto-titulo > a {
     background-color: #00A9E4;
     -webkit-border-radius: 50%;
             border-radius: 50%;
     font-size: 1rem;
     height: 2.5rem;
-    left: -3rem;
+    right: 1rem;
     position: absolute;
     top: 1rem;
     width: 2.5rem;
-    line-height: 0;
-    visibility: hidden;
-    opacity: 0; }
-    .lista > a:after {
+    z-index: 2; }
+    .lista-volver:after, .producto-titulo > a:after {
       content: '\f00d';
       /* '\f00d'; */
       font-family: 'icomoon'; }
@@ -880,7 +882,15 @@ menu {
       margin-top: 2rem;
       border-bottom: solid 1px #00A9E4; }
       .lista span:after {
-        content: ''; } }
+        content: ''; }
+    .lista-volver, .producto-titulo > a {
+      font-size: 1rem;
+      height: 2.5rem;
+      right: inherit;
+      left: -3rem;
+      top: 1rem;
+      width: 2.5rem;
+      opacity: 0; } }
 
 .fondo {
   background-image: url("../img/fondos/f-home.jpg");
@@ -1003,7 +1013,7 @@ menu {
       .home-nav a:after {
         content: '';
         position: absolute;
-        bottom: .75rem;
+        bottom: .25rem;
         left: 0;
         height: 3px;
         width: 100%; }
@@ -1095,6 +1105,8 @@ menu {
         font-size: 3.5rem; }
         .home-nav a:not(:last-child) {
           margin: 0 7rem 0 0; }
+        .home-nav a:after {
+          bottom: .75rem; }
       .home-nav-secondary {
         height: auto;
         bottom: -6.5rem; }
@@ -1314,50 +1326,30 @@ menu {
   background-position: center;
   -webkit-background-size: cover;
           background-size: cover;
-  height: 100vh;
-  margin-right: 15rem; }
+  height: 100vh; }
 
 .producto-conte {
   background-color: rgba(0, 0, 0, 0.6);
-  -webkit-box-pack: end;
-  -webkit-justify-content: flex-end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
+  height: 100vh;
+  width: 100vw;
   -webkit-box-align: stretch;
   -webkit-align-items: stretch;
       -ms-flex-align: stretch;
-          align-items: stretch;
-  height: 100vh;
-  margin-right: 15rem;
-  padding-right: 15rem;
-  width: 100vw; }
+          align-items: stretch; }
   .producto-conte > div {
-    width: -webkit-calc(100% - 16rem);
-    width: calc(100% - 16rem);
-    height: 100vh;
-    overflow-y: scroll;
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -webkit-flex-direction: column;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-pack: stretch;
-    -webkit-justify-content: stretch;
-        -ms-flex-pack: stretch;
-            justify-content: stretch; }
+    margin-top: 6.5rem;
+    width: 100vw;
+    height: -webkit-calc(100vh - 6.5rem);
+    height: calc(100vh - 6.5rem);
+    overflow-y: scroll; }
 
 .producto section {
-  height: 100%;
   width: 100%; }
 
 .producto-titulo {
   background: white;
   text-align: center;
-  padding: 0 3rem;
+  padding: 1rem 3rem;
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -1370,14 +1362,13 @@ menu {
   -webkit-box-align: center;
   -webkit-align-items: center;
       -ms-flex-align: center;
-          align-items: center; }
+          align-items: center;
+  position: relative; }
   .producto-titulo div {
     background-position: center;
     -webkit-background-size: contain;
             background-size: contain;
-    background-repeat: no-repeat;
-    height: 250px;
-    width: 300px; }
+    background-repeat: no-repeat; }
   .producto-titulo h1 {
     font-family: "Fjalla One", sans-serif;
     font-size: 1.8rem;
@@ -1387,8 +1378,11 @@ menu {
     color: #00A9E4;
     font-size: 1.2rem;
     margin: 0; }
+  .producto-titulo > a {
+    z-index: 0; }
 
 .producto-info {
+  padding-top: 1rem;
   background: #00A9E4;
   text-align: center; }
   .producto-info span {
@@ -1414,8 +1408,7 @@ menu {
 
 .receta .producto-titulo {
   padding: 0;
-  padding-bottom: 1.5rem;
-  min-height: 400px; }
+  padding-bottom: 1.5rem; }
   .receta .producto-titulo div {
     width: 100%;
     padding: 0 3rem; }
@@ -1436,7 +1429,7 @@ menu {
           background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  height: 20rem; }
+  height: 10rem; }
 
 .receta .producto-info {
   padding: 1rem 3rem;
@@ -1448,9 +1441,50 @@ menu {
 .receta .producto-fondo {
   background-image: url("../img/fondos/f-recetas.jpg"); }
 
-.receta .separacion {
-  margin-top: -1rem;
-  margin-bottom: -.39rem; }
+.lista-producto-responsive {
+  display: none !important; }
+
+@media only screen and (min-width: 768px) {
+  .producto-fondo {
+    margin-right: 15rem; }
+  .producto-conte {
+    margin-right: 15rem;
+    padding-right: 15rem;
+    -webkit-box-pack: end;
+    -webkit-justify-content: flex-end;
+        -ms-flex-pack: end;
+            justify-content: flex-end; }
+    .producto-conte > div {
+      display: -webkit-box;
+      display: -webkit-flex;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -webkit-flex-direction: column;
+          -ms-flex-direction: column;
+              flex-direction: column;
+      -webkit-box-pack: stretch;
+      -webkit-justify-content: stretch;
+          -ms-flex-pack: stretch;
+              justify-content: stretch;
+      margin-top: 0;
+      width: -webkit-calc(100% - 16rem);
+      width: calc(100% - 16rem);
+      height: 100vh; }
+  .producto section {
+    height: 100%; }
+  .producto-titulo div {
+    height: 250px;
+    width: 300px; }
+  .producto-volver {
+    display: none; }
+  .receta .producto-titulo {
+    min-height: 400px; }
+  .receta .producto-titulo-fondo {
+    height: 20rem; }
+  .lista-producto-responsive {
+    display: inline !important; } }
 
 .empresa section {
   padding: 0 3rem 2rem; }
