--- a/src/css/pages/common/menu.scss
+++ b/src/css/pages/common/menu.scss
@@ -42,12 +42,12 @@ menu{
     background-image: url('../img/fondos/f-home.jpg');
     background-position: center;
     background-size: cover;
-    left: -2rem;
+    left: -1rem;
     height: 100vh;
     opacity: 0;
-    top: -2rem;
+    top: -1rem;
     transition: all ease-in-out .3s;
-    width: calc(100vw + 2rem);
+    width: 100vw;
     z-index: $index-3;
     visibility: collapse;
     @extend .wrapper;
@@ -113,6 +113,7 @@ menu{
     &-modal{
       left: -2rem;
       top: -2rem;
+      flex-direction: row;
       &:after{
         width: 100vw;
       }
