--- a/src/css/pages/empresa.scss
+++ b/src/css/pages/empresa.scss
@@ -4,6 +4,7 @@
 .empresa{
   section{
     padding: 0 3rem 2rem;
+    padding: 0 1rem 2rem;
   }
   header{
     background-image: url('../img/nuestra-empresa.jpg');
