--- a/src/css/index.build.css
+++ b/src/css/index.build.css
@@ -949,12 +949,25 @@ menu {
         font-family: 'icomoon';
         left: 50%;
         position: absolute; }
+  .fondo header,
+  .fondo footer {
+    opacity: 0; }
+
+@media only screen and (min-width: 768px) {
+  .fondo header,
+  .fondo footer {
+    opacity: 1; } }
 
 .masInfo {
   height: 100vh;
   position: relative;
   width: 100vw;
-  z-index: 2; }
+  z-index: 2;
+  -webkit-box-align: start;
+  -webkit-align-items: flex-start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  padding: 6.5rem 0 0; }
   .masInfo-conte {
     background: white;
     color: #666;
@@ -968,7 +981,7 @@ menu {
       height: 2.5rem;
       position: absolute;
       right: 1rem;
-      top: 1rem;
+      top: -1.3rem;
       width: 2.5rem; }
     .masInfo-conte h1 {
       color: #666;
@@ -980,6 +993,20 @@ menu {
       font-size: .8rem; }
       .masInfo-conte p:last-child {
         margin: 0; }
+
+@media only screen and (min-width: 768px) {
+  .masInfo {
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center;
+    padding: 0; }
+    .masInfo-conte > a {
+      font-size: 1rem;
+      height: 2.5rem;
+      right: 1rem;
+      top: 1rem;
+      width: 2.5rem; } }
 
 .home {
   background-image: url("../img/fondos/home-small.jpg");
@@ -1365,6 +1392,8 @@ menu {
           align-items: center;
   position: relative; }
   .producto-titulo div {
+    height: 150px;
+    width: 200px;
     background-position: center;
     -webkit-background-size: contain;
             background-size: contain;
@@ -1412,6 +1441,8 @@ menu {
   .receta .producto-titulo div {
     width: 100%;
     padding: 0 3rem; }
+  .receta .producto-titulo div.receta-descripcion {
+    height: 100%; }
   .receta .producto-titulo h1 {
     margin-bottom: 2rem; }
   .receta .producto-titulo span {
@@ -1487,7 +1518,8 @@ menu {
     display: inline !important; } }
 
 .empresa section {
-  padding: 0 3rem 2rem; }
+  padding: 0 3rem 2rem;
+  padding: 0 1rem 2rem; }
 
 .empresa header {
   background-image: url("../img/nuestra-empresa.jpg");
@@ -1497,7 +1529,7 @@ menu {
   height: 16rem; }
 
 .manipulacion section {
-  padding: 2rem 3rem; }
+  padding: 2rem 1rem; }
 
 .manipulacion p {
   font-size: .8rem; }
@@ -1511,18 +1543,41 @@ menu {
       -ms-flex-pack: distribute;
           justify-content: space-around;
   margin-top: 2rem;
-  width: 100%; }
+  width: 100%;
+  -webkit-flex-wrap: wrap;
+      -ms-flex-wrap: wrap;
+          flex-wrap: wrap; }
 
 .manipulacion li {
-  text-align: center; }
-  .manipulacion li:not(:last-child) {
-    margin-right: 1rem; }
+  text-align: center;
+  margin: 1rem; }
   .manipulacion li p {
     max-width: 9rem; }
 
 .manipulacion img {
-  width: 8rem;
-  margin-bottom: 1.5rem; }
+  width: 5rem;
+  margin-bottom: 1rem; }
+
+@media only screen and (min-width: 520px) {
+  .manipulacion li p {
+    max-width: 13rem; } }
+
+@media only screen and (min-width: 768px) {
+  .manipulacion section {
+    padding: 2rem 3rem; }
+  .manipulacion ul {
+    -webkit-flex-wrap: nowrap;
+        -ms-flex-wrap: nowrap;
+            flex-wrap: nowrap; }
+  .manipulacion li {
+    margin: 0; }
+    .manipulacion li:not(:last-child) {
+      margin-right: 1rem; }
+    .manipulacion li p {
+      max-width: 9rem; }
+  .manipulacion img {
+    width: 8rem;
+    margin-bottom: 1.5rem; } }
 
 .contacto main {
   padding: 2rem 3rem; }
@@ -1541,18 +1596,25 @@ menu {
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
-  margin-top: 3rem; }
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  margin-top: 1rem; }
 
 .contacto p {
   font-size: .9rem;
-  margin-bottom: 1rem; }
+  margin-bottom: .5rem; }
 
-.contacto aside span {
-  color: #00A9E4;
-  display: block;
-  font-family: "Fjalla One", sans-serif;
-  font-size: 1.1rem;
-  font-weight: bold; }
+.contacto aside {
+  text-align: center; }
+  .contacto aside span {
+    color: #00A9E4;
+    display: block;
+    font-family: "Fjalla One", sans-serif;
+    font-size: 1.1rem;
+    font-weight: bold; }
 
 .contacto-form {
   display: -webkit-box;
@@ -1564,8 +1626,10 @@ menu {
   -webkit-flex-direction: column;
       -ms-flex-direction: column;
           flex-direction: column;
-  margin-left: 5rem;
-  width: 20rem; }
+  margin-top: 1.5rem;
+  max-width: 800px;
+  position: relative;
+  width: 100%; }
   .contacto-form input,
   .contacto-form textarea {
     border: solid 1px #999;
@@ -1597,3 +1661,17 @@ menu {
     height: 2rem;
     margin-left: .5rem;
     width: 2rem; }
+
+@media only screen and (min-width: 768px) {
+  .contacto section {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: row;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    margin-top: 3rem; }
+  .contacto p {
+    margin-bottom: 1rem; }
+  .contacto-form {
+    margin: 0 0 0 5rem;
+    width: 20rem; } }
