--- a/src/css/pages/common/info.scss
+++ b/src/css/pages/common/info.scss
@@ -7,6 +7,8 @@
   width: 100vw;
   z-index: 2;
   @extend .wrapper;
+  align-items: flex-start;
+  padding: 6.5rem 0 0;
 
   &-conte{
     background: white;
@@ -20,7 +22,7 @@
       height: 2.5rem;
       position: absolute;
       right: 1rem;
-      top: 1rem;
+      top: -1.3rem;
       width: 2.5rem;
       @extend .wrapper;
     }
@@ -35,6 +37,21 @@
       font-size: .8rem;
       &:last-child{
         margin: 0;
+      }
+    }
+  }
+}
+@include respond-to(l){
+  .masInfo{
+    align-items: center;
+    padding: 0;
+    &-conte{
+      &>a{
+        font-size: 1rem;
+        height: 2.5rem;
+        right: 1rem;
+        top: 1rem;
+        width: 2.5rem;
       }
     }
   }
