--- a/src/css/pages/contacto.scss
+++ b/src/css/pages/contacto.scss
@@ -18,13 +18,15 @@
   }
   section{
     display: flex;
-    margin-top: 3rem;
+    flex-direction: column;
+    margin-top: 1rem;
   }
   p{
     font-size: .9rem;
-    margin-bottom: 1rem;
+    margin-bottom: .5rem;
   }
   aside{
+    text-align: center;
     span{
       color: $color-base;
       display: block;
@@ -36,8 +38,10 @@
   &-form{
     display: flex;
     flex-direction: column;
-    margin-left: 5rem;
-    width: 20rem;
+    margin-top: 1.5rem;
+    max-width: 800px;
+    position: relative;
+    width: 100%;
     input,
     textarea{
       border: solid 1px #999;
@@ -72,6 +76,22 @@
       margin-left: .5rem;
       width: 2rem;
       @extend .wrapper;
+    }
+  }
+}
+
+@include respond-to(l){
+  .contacto{
+    section{
+      flex-direction: row;
+      margin-top: 3rem;
+    }
+    p{
+      margin-bottom: 1rem;
+    }
+    &-form{
+      margin: 0 0 0 5rem;
+      width: 20rem;
     }
   }
 }
