--- a/src/js/component/pages/categoria/categoria.html
+++ b/src/js/component/pages/categoria/categoria.html
@@ -1,4 +1,4 @@
-<main class="categoria">
+<main class="categoria view-height">
   <section class="categoria-fondo">
     <h1>{{$ctrl.categoria}}</h1>
   </section>
