--- a/src/js/component/pages/producto/producto.html
+++ b/src/js/component/pages/producto/producto.html
@@ -1,4 +1,4 @@
-<main class="producto">
+<main class="producto view-height">
   <div class="producto-fondo">
     <div class="producto-conte">
       <div>
