--- a/src/js/component/pages/productos/productos.html
+++ b/src/js/component/pages/productos/productos.html
@@ -1,4 +1,4 @@
-<main class="productos" ng-class="{
+<main class="productos view-height" ng-class="{
   'background-jamones-pechugas': $ctrl.background.jamonesPechugas,
   'background-tradicional': $ctrl.background.tradicional,
   'background-parrilleros': $ctrl.background.parrilleros,
