--- a/src/js/component/pages/receta/receta.html
+++ b/src/js/component/pages/receta/receta.html
@@ -1,4 +1,4 @@
-<main class="producto receta">
+<main class="producto receta view-height">
     <div class="producto-fondo">
       <div class="producto-conte">
         <div>
