--- a/src/js/component/pages/home/home.html
+++ b/src/js/component/pages/home/home.html
@@ -1,4 +1,4 @@
-<main class="home view-height">
+<main class="home">
   <section class="home-nav">
     <a ng-href="#/productos">Productos</a>
     <a ng-href="#/recetas">Recetas</a>
