--- a/src/js/component/pages/recetas/recetas.html
+++ b/src/js/component/pages/recetas/recetas.html
@@ -1,4 +1,4 @@
-<main class="categoria recetas view-height">
+<main class="categoria recetas">
   <section class="categoria-fondo">
     <h1>Recetas</h1>
   </section>
