--- a/src/css/pages/producto.scss
+++ b/src/css/pages/producto.scss
@@ -56,7 +56,7 @@
     }
   }
   &-info{
-    padding-top: 1rem;
+    padding: 1rem 0;
     background: $color-base;
     text-align: center;
     span{
