--- a/src/css/pages/categoria.scss
+++ b/src/css/pages/categoria.scss
@@ -10,6 +10,7 @@
     background-repeat: no-repeat;
     height: 100vh;
     margin-right: 0;
+    padding-bottom: 2rem;
     @extend .wrapper;
     h1{
       opacity: 0;
@@ -85,6 +86,7 @@
     &-fondo{
       animation: fondo-entrada .8s forwards; 
       animation-timing-function: ease-in-out;
+      padding-bottom: 0;
       &.in{
         transition: all 1.5s ease-in-out;
         margin-right: 15rem
