--- a/src/css/pages/productos.scss
+++ b/src/css/pages/productos.scss
@@ -28,7 +28,7 @@
     }
   }
   a{
-    font-size: 1.8rem;
+    font-size: 2.3rem;
     text-shadow: -3px 2px #222;
     &:hover{
       color: $color-base;
@@ -50,6 +50,9 @@
       opacity: 0;
       justify-content: flex-start;
       animation: nav-entrada .8s .6s forwards; 
+    }
+    a{
+      font-size: 1.8rem;
     }
   }
   .background{
