--- a/src/css/pages/categoria.scss
+++ b/src/css/pages/categoria.scss
@@ -10,7 +10,7 @@
     background-repeat: no-repeat;
     height: 100vh;
     margin-right: 0;
-    padding-bottom: 2rem;
+    padding-bottom: 14vh;
     @extend .wrapper;
     h1{
       opacity: 0;
